--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
         <title> Demo Project </title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root">Hello</div>
     </body>
 </html>
